# av-curation-pipeline

./: .gitignore  README.md  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
pipeline/: __init__.py  ann_benchmark.py  api.py  curation.py  embeddings.py  lineage.py  loaders.py  vector_store.py
precompute/: run.py
scripts/: deploy.ps1  download_nuscenes_mini.py
tests/: test_vector_store.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ClusterScatter.tsx  DuplicatesGallery.tsx  LineageTimeline.tsx  OutliersGallery.tsx  StatCard.tsx
web/lib/: data.ts  types.ts
web/public/data/: ann_benchmark.json  clusters.json  curation_set.json  duplicates.json  lineage.json  outliers.json  samples.json  summary.json
